# Vocode-Automation

./: .gitignore  main.py  pyproject.toml  test_webhook_sender.py  utilities.py
automation_clients/: attio_client.py  base_client.py  pylon_client.py
automations/: attio_to_python.py  error_to_slack.py
error_handler/: automation_exception.py  error_type.py  exception_handlers.py  http_exception.py  pylon_automation_exception.py
error_handler/custom_exceptions/: automation_exception.py  http_exception.py  pylon_exception.py
exception_manager/: error_types.py  exception_handlers.py
exception_manager/custom_exceptions/: automation_exception.py  http_exception.py  pylon_exception.py
loggers/: application_logger.py  slack_logger.py
loggers/log_handlers/: slack_log_handler.py
tests/: .env.test  test_attio_client.py  test_exception_handlers.py  test_pylon_client.py
webhook_manager/: webhook_handler_registry.py  webhook_listener.py
