[tool.poetry]
name = "vocode-automation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pytest = "^8.2.2"
quart = "^0.19.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
